--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -3,6 +3,9 @@
 
     <!-- General/various strings -->
     <string name="app_name">התקנת Xposed</string>
+	<string name="menuSend">שלח</string>
+    <string name="menuSaveToSd">שמור לכרטיס זיכרון</string>
+    <string name="xposed_not_active">הגרסה האחרונה של Xposed לא פעילה כרגע. התקנת את הסביבה והפעלת מחדש?</string>
 
     <!-- Welcome screen / main sections -->
     <string name="welcome">ברוכים הבאים ל <b>התקנת Xposed</b>!\nאנא בחרו מה ברצונכם לעשות:</string>
@@ -16,6 +19,8 @@
     <string name="welcome_update_available">קיים עדכון למודול אחד או יותר.</string>
     <string name="tabSettings">הגדרות</string>
     <string name="tabSettingsDescription">עבור לחלק זה כדי להגיד את סביבת Xposed ואת אפליקציה זו.</string>
+	<string name="tabLogs">לוג</string>
+    <string name="tabLogsDescription">הצגה, שמירה ושליחה של הלוג של Xposed.</string>
     <string name="tabAbout">אודות</string>
     <string name="tabAboutDescription">למד על האנשים אשר יצרו את Xposed, איפה לקבל תמיכה על אפליקציה זו ועוד.</string>
 
@@ -40,6 +45,11 @@
     <string name="warning_xposed_min_version">מודול זה דורש גרסה עדכנית יותר של סביבת XposedBridge (%d) ולכן לא ניתן להפעילו.</string>
     <string name="no_min_version_specified">מודול זה אינו מספק את הגרסה של סביבת XposedBridge שהוא צריך.</string>
     <string name="warning_min_version_too_low">מודול זה פותח עבור XposedBridge בגרסה %1$d, אבל בעקרבות שינויים בגרסה %2$d, הוא בוטל.</string>
+	<string name="module_launch">פתח ממשק</string>
+    <string name="module_download_updates">הורד/התקן</string>
+    <string name="module_support">תמיכה</string>
+    <string name="module_app_info">מידע על האפליקציה</string>
+    <string name="module_uninstall">הסרת התקנה</string>
 
     <!-- Download tab -->
     <string name="menuSearch">חיפוש</string>
@@ -48,7 +58,7 @@
     <string name="branch_display">(%s branch)</string>
     <string name="download_author">על ידי %s</string>
     <string name="download_unknown_author">מפתח לא ידוע</string>
-    <string name="download_status_installed">מותקו (גרסה %s)</string>
+    <string name="download_status_installed">מותקן (גרסה %s)</string>
     <string name="download_status_update_available">עדכון זמין (גרסה %1$s \u2190 %2$s)</string>
     <string name="download_timestamps">נוסף ב %1$s \u00b7 עדוכן ב %2$s</string>
     <string name="download_sorting_title">מיין לפי</string>
@@ -68,10 +78,15 @@
     <string name="settings_group_download">הורדות</string>
     <string name="settings_enable_downloads">אפשר הורדות</string>
     <string name="settings_enable_downloads_summary">מאפשר לאפליקצייה לבדוק ולעדכן מודולים</string>
-    <string name="settings_group_experimental">ניסיוני</string>
-    <string name="settings_performance_experiment">ניסוי ביצועים</string>
-    <string name="settings_performance_experiment_summary">אם הינך מאפשר זאת, הביצועים של המערכת שלך יכולים להשתפר, לגרוע או להישאר זהים. הרגישו חופשי לנסות  ולדווח לי את התוצאות (אם יש). אתה צריך להתקין מחדש את הסביבה ולהפעיל מחדש את המכשיר כדי להחיל את השינויים.</string>
+    <string name="settings_group_experimental" tools:ignore="UnusedResources">ניסיוני</string>
+    <string name="settings_performance_experiment" tools:ignore="UnusedResources">ניסוי ביצועים</string>
+    <string name="settings_performance_experiment_summary" tools:ignore="UnusedResources">אם הינך מאפשר זאת, הביצועים של המערכת שלך יכולים להשתפר, לגרוע או להישאר זהים. הרגישו חופשי לנסות ולדווח לי את התוצאות (אם יש). אתה צריך להתקין מחדש את הסביבה ולהפעיל מחדש את המכשיר כדי להחיל את השינויים.</string>
 
+	<!-- Logs tab -->
+    <string name="logs_load_failed">לא ניתן לקרוא את הלוג:</string>
+    <string name="logs_save_failed">לא ניתן לשמור את הלוג לכרטיס הזיכרון:</string>
+    <string name="sdcard_not_writable">כרטיס זיכרון לא נמצא, או לא ניתן לכתיבה</string>
+	
     <!-- About tab -->
     <string name="about_developers_label">מפתחים ראשיים:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> ו <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
