--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -100,6 +100,11 @@
     <string name="download_section_older">Vor mehr als 30 Tagen</string>
 
     <!-- Settings tab -->
+    <string name="settings_group_installation">Installation</string>
+    <string name="settings_install_mode">Installationsmodus</string>
+    <string name="install_mode_normal">Klassisch (/system direkt ändern)</string>
+    <string name="install_mode_recovery_auto">Recovery (ZIP automatisch installieren)</string>
+    <string name="install_mode_recovery_manual">Recovery (ZIP auf SD-Karte schreiben, selbst installieren)</string>
     <string name="settings_group_download">Download</string>
     <string name="settings_enable_downloads">Downloads aktivieren</string>
     <string name="settings_enable_downloads_summary">Xposed Installer die Suche nach Aktualisierungen und neuen Modulen erlauben</string>
