Made better translation

--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -2,25 +2,25 @@
 <resources>
 
     <!-- General/various strings -->
-    <string name="app_name">Inštalátor Xposed</string>
+    <string name="app_name">Xposed Inštalátor</string>
     <string name="menuSend">Odoslať</string>
     <string name="menuSaveToSd">Uložiť na kartu SD</string>
     <string name="xposed_not_active">Najnovšia verzia Xposed nie je aktuálne aktívna. Nainštalovali ste framework a vykonali reštart?</string>
 
     <!-- Welcome screen / main sections -->
-    <string name="welcome">Vitajte v <b>Inštalátori Xposed</b>!\nVyberte prosím, čo chcete robiť:</string>
+    <string name="welcome">Vitajte v <b>Xposed Inštalátore</b>!\nVyberte prosím sekciu, do ktorej chcete prejsť:</string>
     <string name="tabInstall">Framework</string>
-    <string name="tabInstallDescription">Tu môžete spravovať framework Xposed, ktorý je nutný pre fungovanie modulov.</string>
+    <string name="tabInstallDescription">Tu môžete spravovať Xposed framework, ktorý je nutný pre fungovanie modulov.</string>
     <string name="tabModules">Moduly</string>
     <string name="tabModulesDescription">Samotný framework neposkytuje žiadne funkcie. Tieto funkcie poskytujú rôzne moduly. V tejto sekcii môžete aktivovať moduly po ich inštalácií.</string>
     <string name="tabDownload">Sťahovanie</string>
     <string name="tabDownloadDescription">Táto sekcia Vám umožní pristupovať k repozitáru s modulmi, takže môžete vyhľadávať a sťahovať tie, ktoré sa Vám páčia a udržiavať ich stále aktuálne.</string>
-    <string name="welcome_framework_update_available">Je dostupná aktualizácia pre framework Xposed (%s).</string>
+    <string name="welcome_framework_update_available">Je dostupná aktualizácia pre Xposed framework (%s).</string>
     <string name="welcome_update_available">Je dostupná jedna alebo viac aktualizácií pre moduly.</string>
     <string name="tabSettings">Nastavenia</string>
-    <string name="tabSettingsDescription">Prejdite do tejto sekcie pre nastavenie Inštalátora Xposed a frameworku.</string>
+    <string name="tabSettingsDescription">Prejdite do tejto sekcie pre nastavenie Xposed Inštalátora a frameworku.</string>
     <string name="tabLogs">Záznamy</string>
-    <string name="tabLogsDescription">Zobraziť a uložiť/odoslať záznamy frameworku Xposed.</string>
+    <string name="tabLogsDescription">Zobraziť a uložiť/odoslať záznamy Xposed frameworku.</string>
     <string name="tabAbout">O aplikácii</string>
     <string name="tabAboutDescription">Dozveďte sa viac o ľuďoch, ktorí vytvorili Xposed, kde môžete získať podporu pre túto aplikáciu, atď.</string>
 
@@ -77,7 +77,7 @@
      <!-- Settings tab -->
     <string name="settings_group_download">Sťahovanie</string>
     <string name="settings_enable_downloads">Povoliť sťahovania</string>
-    <string name="settings_enable_downloads_summary">Povoliť Inštalátoru Xposed kontrolovanie nových modulov a aktualizácií</string>
+    <string name="settings_enable_downloads_summary">Povoliť Xposed Inštalátoru kontrolovanie nových modulov a aktualizácií</string>
     <string name="settings_group_experimental">Experimentálne</string>
     <string name="settings_performance_experiment">Experiment s výkonom</string>
     <string name="settings_performance_experiment_summary">Ak povolíte túto možnosť, výkon systému sa môže buď zvýšiť, znížiť alebo zostať rovnaký. Nebojte sa vyskúšať experiment s výkonom a podajte správu o efekte, ktorý vidíte (nemusí byť však vôbec žiadny). Po zmene tejto možnosti je nutné znovu inštalovať framework a vykonať reštart zariadenia.</string>
