--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -4,25 +4,25 @@
     <!-- General/various strings -->
     <string name="app_name">Xposed Installer</string>
     <string name="menuSend">Deel</string>
-    <string name="menuSaveToSd">Opslaan op SD kaart</string>
-    <string name="xposed_not_active">De laatste versie van Xposed is momenteel niet actief. Heb je het framework geïnstalleerd en geherstart?</string>
+    <string name="menuSaveToSd">Opslaan op SD-kaart</string>
+    <string name="xposed_not_active">De laatste versie van Xposed is momenteel niet actief. Heb je het framework geïnstalleerd en systeem herstart?</string>
 
     <!-- Welcome screen / main sections -->
     <string name="welcome">Welkom bij de <b>Xposed Installer</b>!\nKies alstublieft wat u wenst te doen:</string>
     <string name="tabInstall">Framework</string>
     <string name="tabInstallDescription">Hier kunt u het Xposed framework instellen, Dit is nodig voor elke module om te werken.</string>
     <string name="tabModules">Modules</string>
-    <string name="tabModulesDescription">Het framework op zich voegt geen functionaliteit toe. Daar heeft u modules voor nodig. In dit onderdeel kunt u modules activeren nadat u ze hebt geinstalleerd.</string>
+    <string name="tabModulesDescription">Het framework op zich voegt geen functionaliteit toe. Daar heeft u modules voor nodig. In dit onderdeel kunt u modules activeren nadat u ze geinstalleerd hebt.</string>
     <string name="tabDownload">Download</string>
-    <string name="tabDownloadDescription">Deze sectie geeft u toegang tot een verzameling van modules, zodat u degene die u goed vind kunt zoeken en downloaden en hen bijgewerkt houden.</string>
+    <string name="tabDownloadDescription">Deze sectie geeft u toegang tot een verzameling van modules, zodat u de modules die u goed vind kunt zoeken en downloaden en hen bijgewerkt kunt houden.</string>
     <string name="welcome_framework_update_available">Een update voor het Xposed framework is beschikbaar.</string>
     <string name="welcome_update_available">Eén of meer update(s) voor modules beschikbaar.</string>
     <string name="tabSettings">Instellingen</string>
-    <string name="tabSettingsDescription">Ga naar dit onderdeel om de Xposed Installer en framework te configureren.</string>
+    <string name="tabSettingsDescription">Ga naar dit onderdeel om de Xposed Installer en het framework te configureren.</string>
     <string name="tabLogs">Logboek</string>
     <string name="tabLogsDescription">Bekijk en sla het logboek op of verstuur het logboek van het Xposed framework.</string>
     <string name="tabAbout">Over</string>
-    <string name="tabAboutDescription">Leer meer over de mensen die Xposed hebben gecreëerd, waar ondersteuning voor deze app te vinden enz.</string>
+    <string name="tabAboutDescription">Leer meer over de mensen die Xposed hebben gecreëerd, waar ondersteuning voor deze app te vinden is, enz.</string>
 
     <!-- Installer tab -->
     <string name="install">Installeren/Bijwerken</string>
@@ -30,20 +30,20 @@
     <string name="installedVersion">actief</string>
     <string name="latestVersion">Laatste versie</string>
     <string name="versions">Versies:</string>
-    <string name="soft_reboot">Systeem herstart</string>
-    <string name="reboot">Herstart</string>
+    <string name="soft_reboot">Herstart systeem</string>
+    <string name="reboot">Herstart apparaat</string>
     <string name="areyousure">Weet u het zeker?</string>
-    <string name="phone_not_compatible">Xposed is (nog) niet compatibel met Android SDK versie %1$d van uw processor architectuur (%2$s).</string>
-    <string name="not_tested_but_compatible">Xposed is nog niet getest met Android SDK versie %d, maar het lijkt compatibel te zijn. U kunt het proberen te installeren als u het wilt proberen.</string>
+    <string name="phone_not_compatible">Xposed is (nog) niet compatibel met Android SDK-versie %1$d van uw processor architectuur (%2$s).</string>
+    <string name="not_tested_but_compatible">Xposed is nog niet getest met Android SDK-versie %d, maar het lijkt compatibel te zijn. U kunt het proberen te installeren als u het wilt proberen.</string>
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Xposed module is nog niet geactiveerd</string>
     <string name="module_empty_description">(geen beschrijving beschikbaar)</string>
     <string name="module_no_ui">Deze module heeft geen interface beschikbaar</string>
     <string name="no_xposed_modules_found">Geen Xposed modules gevonden!</string>
-    <string name="xposed_module_list_updated">Xposed module lijst is bijgewerkt\nVeranderingen worden actief bij herstart</string>
-    <string name="warning_xposed_min_version">Deze module heeft een nieuwere XposedBridge versie nodig (%d) en kan dus niet geactiveerd worden.</string>
-    <string name="no_min_version_specified">Deze module heeft geen XposedBridge benodigede versie meegegeven.</string>
+    <string name="xposed_module_list_updated">De module-lijst van Xposed is bijgewerkt\nVeranderingen worden actief bij herstart</string>
+    <string name="warning_xposed_min_version">Deze module heeft een nieuwere versie van XposedBridge nodig (%d) en kan dus niet geactiveerd worden.</string>
+    <string name="no_min_version_specified">Deze module heeft geen benodigde versie van XposedBridge opgegeven.</string>
     <string name="warning_min_version_too_low">Deze module werd gecreëerd voor XposedBridge versie %1$d, maar door veranderingen in versie %2$d, is het uitgeschakeld.</string>
     <string name="module_launch">Open App</string>
     <string name="module_download_updates">Download / update</string>
@@ -79,22 +79,22 @@
     <string name="settings_enable_downloads">Downloads inschakelen</string>
     <string name="settings_enable_downloads_summary">Xposed Installer toestaan te controleren op updates en nieuwe modules</string>
     <string name="settings_group_experimental">Experimenteel</string>
-    <string name="settings_performance_experiment">Prestatie experiment</string>
-    <string name="settings_performance_experiment_summary">Als u dit inschakeld, kan uw systeem prestaties verhogen, verminderen of hetzelfde blijven. Het is gratis om te proberen en laat ons weten welk effect u ziet (of als er helemaal geen is). U moet het framework herinstalleren en herstarten nadat u dit veranderd.</string>
+    <string name="settings_performance_experiment">Prestatie-experiment</string>
+    <string name="settings_performance_experiment_summary">Als u dit inschakelt, kunnen uw systeemprestaties verhogen, verminderen of hetzelfde blijven. Het is gratis te proberen, laat ons weten welk effect u ziet (ook als er helemaal geen effect is). U moet het framework herinstalleren en herstarten nadat u dit veranderd hebt.</string>
 
     <!--  Logs tab  -->
     <string name="logs_load_failed">Kan logboek niet lezen:</string>
-    <string name="logs_save_failed">Kan niet schrijven naar SD kaart:</string>
-    <string name="sdcard_not_writable">SD kaart niet gevonden of niet schrijfbaar</string>
+    <string name="logs_save_failed">Kan niet schrijven naar SD-kaart:</string>
+    <string name="sdcard_not_writable">SD-kaart niet gevonden of niet schrijfbaar</string>
 
     <!-- About tab -->
-    <string name="about_developers_label">Hoofd ontwikkelaars:</string>
+    <string name="about_developers_label">Hoofdontwikkelaars:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> en <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
     <string name="about_developers_warning">Contacteer ons alstublieft <b>niet</b> direct voor ondersteuning, gebruik de onderstaande link. (Onder de titel "Krijg ondersteuning op")</string>
-    <string name="about_translator_label">Het framework in is het Nederlands vertaald door:</string>
+    <string name="about_translator_label">Het framework is naar het Nederlands vertaald door:</string>
     <string name="translator">Martinusbe &amp; <a href="http://git.gertlily.com/">Gert-Jan Anema</a></string>
     <string name="about_version_label">Versie van deze app:</string>
-    <string name="about_source_label">Bron code:</string>
+    <string name="about_source_label">Broncode:</string>
     <string name="about_support_label">Krijg ondersteuning op:</string>
     <string name="about_support_warning">Deze link is voor de Xposed en het framework <b>alleen</b>! Als u hulp nodig heeft met een module, gebruik hem <b>niet</b>, Contakteer de auteur van de module in de plaats.</string>
     <string name="about_libraries_label">Gebruikte bibliotheken:</string>
@@ -102,7 +102,7 @@
     <!-- DownloadView -->
     <string name="download_view_download">Download</string>
     <string name="download_view_install">Installeren</string>
-    <string name="download_view_cancel">Annuleer</string>
+    <string name="download_view_cancel">Annuleren</string>
     <string name="download_view_no_url">Geen download URL beschikbaar</string>
     <string name="download_view_running">Bezig met downloaden (%1$,d van %2$,d kB)</string>
     <string name="download_view_waiting">Wachten op download&#8230;</string>
@@ -113,7 +113,7 @@
     <string name="download_md5sum_incorrect">MD5 som is niet correct (gedownload: %1$s, verwacht: %2$s)</string>
     <string name="download_could_not_read_file">Kan het gedownloade bestand niet lezen: %s</string>
     <string name="download_no_valid_apk">Gedownloade bestand is geen geldige APK (of incompatibel)</string>
-    <string name="download_incorrect_package_name">Pakket naam is niet correct (gedownload: %1$s, verwacht: %2$s)</string>
+    <string name="download_incorrect_package_name">Pakketnaam is incorrect (gedownload: %1$s, verwacht: %2$s)</string>
 
     <!-- RepoLoader -->
     <string name="repo_download_failed_http">Downloaden %1$s mislukt: %2$d (%3$s)</string>
