--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -32,7 +32,7 @@
     <string name="versions">Verzie:</string>
     <string name="soft_reboot">Softvérový reštart</string>
     <string name="reboot">Reštart</string>
-    <string name="areyousure">Ste si istí?</string>
+    <string name="areyousure">Ste si istý?</string>
     <string name="phone_not_compatible">Xposed (zatiaľ) nie je kompatibilný s verziou Android SDK %1$d alebo s architektúrou procesora (%2$s).</string>
     <string name="not_tested_but_compatible">Xposed nebol testovaný s Android SDK verziou %d, ale zdá sa byť kompatibilný. Môžete ho instalovať na vlastné riziko.</string>
 
