Offer uninstall via recovery as well

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -37,7 +37,7 @@
     <string name="not_tested_but_compatible">Xposed wurde noch nicht mit der Android-SDK-Version %d getestet, aber es scheint kompatibel damit zu sein. Wenn du abenteuerlustig bist, kannst die Installation versuchen.</string>
     <string name="reboot_failed">Neustart fehlgeschlagen. Bitte verwende die normale Neustartfunktion des Geräts.</string>
     <string name="auto_flash_note">%s sollte automatisch installiert werden, sobald du "OK" drückst.</string>
-    <string name="manual_flash_note">Bitte installiere %s von der SD-Karte, um die Installation abzuschließen.</string>
+    <string name="manual_flash_note">Bitte installiere %s von der SD-Karte, um den Vorgang abzuschließen.</string>
     <string name="reboot_recovery_confirmation">Willst du jetzt in den Recovery-Modus booten?</string>
 
     <!--  File operations -->
