Offer to reboot after successful (un)installation
Closes #95

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -38,7 +38,8 @@
     <string name="reboot_failed">Neustart fehlgeschlagen. Bitte verwende die normale Neustartfunktion des Geräts.</string>
     <string name="auto_flash_note">%s sollte automatisch installiert werden, sobald du "OK" drückst.</string>
     <string name="manual_flash_note">Bitte installiere %s von der SD-Karte, um den Vorgang abzuschließen.</string>
-    <string name="reboot_recovery_confirmation">Willst du jetzt in den Recovery-Modus booten?</string>
+    <string name="reboot_confirmation">Möchtest du jetzt neustarten?</string>
+    <string name="reboot_recovery_confirmation">Möchtest du jetzt in den Recovery-Modus booten?</string>
 
     <!--  File operations -->
     <string name="root_failed">Root-Zugriff fehlgeschlagen\n\nStelle sicher, dass das Gerät korrekt gerootet ist und Shell-Kommandos nicht blockiert werden.</string>
